// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Output File Strategy symbolsWithOwnFile should --symbolsWithOwnFile [class, interface]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespace/namespace.md",
  "module-1/namespace/classes/namespaceclassa.md",
  "module-1/namespace/interfaces/namespaceinterface.md",
  "module-1/classes/module1classa.md",
  "module-1/classes/module1classb.md",
  "module-1/interfaces/module1interfacea.md",
  "module-1/interfaces/module1interfaceb.md",
  "module-2/module-2.md",
  "module-2/classes/module2classa.md",
  "module-2/classes/module2classb.md",
  "module-2/interfaces/module2interfacea.md",
  "module-2/interfaces/module2interfaceb.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should --symbolsWithOwnFile [class]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespace/namespace.md",
  "module-1/namespace/classes/namespaceclassa.md",
  "module-1/classes/module1classa.md",
  "module-1/classes/module1classb.md",
  "module-2/module-2.md",
  "module-2/classes/module2classa.md",
  "module-2/classes/module2classb.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should set --symbolsWithOwnFile none' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1.md",
  "module_1/nameSpace.md",
  "module_2.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should set default --symbolsWithOwnFile 'all' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespace/namespace.md",
  "module-1/namespace/enums/namespaceenum.md",
  "module-1/namespace/classes/namespaceclassa.md",
  "module-1/namespace/interfaces/namespaceinterface.md",
  "module-1/namespace/types/namespacetypeliteral.md",
  "module-1/namespace/variables/namespacevariable.md",
  "module-1/enums/module1enuma.md",
  "module-1/enums/module1enumb.md",
  "module-1/classes/module1classa.md",
  "module-1/classes/module1classb.md",
  "module-1/interfaces/module1interfacea.md",
  "module-1/interfaces/module1interfaceb.md",
  "module-1/types/module1typeliterala.md",
  "module-1/types/module1typeliteralb.md",
  "module-1/variables/module1variablea.md",
  "module-1/variables/module1variableb.md",
  "module-1/functions/module1functiona.md",
  "module-1/functions/module1functionb.md",
  "module-2/module-2.md",
  "module-2/enums/module2enuma.md",
  "module-2/enums/module2enumb.md",
  "module-2/classes/module2classa.md",
  "module-2/classes/module2classb.md",
  "module-2/interfaces/module2interfacea.md",
  "module-2/interfaces/module2interfaceb.md",
  "module-2/types/module2typeliterala.md",
  "module-2/types/module2typeliteralb.md",
  "module-2/variables/module2variablea.md",
  "module-2/variables/module2variableb.md",
  "module-2/functions/module2functiona.md",
  "module-2/functions/module2sfunctionb.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should set symbolsWithOwnFile [enum, types, variables]' 1`] = `
[
  "modules.md",
  "README.md",
  "module-1/module-1.md",
  "module-1/namespace/namespace.md",
  "module-1/namespace/enums/namespaceenum.md",
  "module-1/namespace/types/namespacetypeliteral.md",
  "module-1/namespace/variables/namespacevariable.md",
  "module-1/enums/module1enuma.md",
  "module-1/enums/module1enumb.md",
  "module-1/types/module1typeliterala.md",
  "module-1/types/module1typeliteralb.md",
  "module-1/variables/module1variablea.md",
  "module-1/variables/module1variableb.md",
  "module-2/module-2.md",
  "module-2/enums/module2enuma.md",
  "module-2/enums/module2enumb.md",
  "module-2/types/module2typeliterala.md",
  "module-2/types/module2typeliteralb.md",
  "module-2/variables/module2variablea.md",
  "module-2/variables/module2variableb.md",
]
`;
